--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -57,7 +57,7 @@ pipelines:
     configuration:
       environmentVariables:
         readOnly:
-          my_releaseName: "simplehelm_${run_number}"
+          my_releaseName: "simplehelm${run_number}"
     steps:
       - name: build_image
         type: DockerBuild
@@ -136,7 +136,7 @@ pipelines:
         configuration:
           helmVersion: 3
           affinityGroup: helm_install
-          releaseName: simplehelm_${run_number}
+          releaseName: simplehelm${run_number}
           integrations:
             - name: k8sIntegrationMD
           inputResources:
