--- a/pipeline/dynatrace/simplehelm/Chart.yaml
+++ b/pipeline/dynatrace/simplehelm/Chart.yaml
@@ -1,5 +1,28 @@
-apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: simplehelm
-version: 0.1.1
+annotations:
+  category: Infrastructure
+apiVersion: v2
+appVersion: 1.19.10
+dependencies:
+  - name: common
+    repository: https://charts.bitnami.com/bitnami
+    tags:
+      - bitnami-common
+    version: 1.x.x
+description: Chart for the nginx server
+engine: gotpl
+home: https://github.com/bitnami/charts/tree/master/bitnami/nginx
+icon: https://bitnami.com/assets/stacks/nginx/img/nginx-stack-220x234.png
+keywords:
+  - nginx
+  - http
+  - web
+  - www
+  - reverse proxy
+maintainers:
+  - email: containers@bitnami.com
+    name: Bitnami
+name: nginx
+sources:
+  - https://github.com/bitnami/bitnami-docker-nginx
+  - http://www.nginx.org
+version: 8.8.4
