--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -6,7 +6,7 @@ resources:
       # replace with your pipelines repository
       path: danielmkn/pipelines-demo # if path is modified, change the name as well, per Pipelines doc
       branches:
-        include: install_helm
+        include: main
       buildOn:
         commit: true
 
@@ -38,7 +38,7 @@ resources:
       gitProvider: GitHubIntegrationMD
       path: danielmkn/pipelines-demo # replace with your repo
       branches:
-        include: install_helm
+        include: main
       buildOn:
         commit: false
 
