--- a/pipeline/dynatrace/busybox/Chart.yaml
+++ b/pipeline/dynatrace/busybox/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
 name: busybox
-version: ${res_simplehelmChart2_version}
+version: 0.1.0
