--- a/pipeline/dynatrace/busybox/values.yaml
+++ b/pipeline/dynatrace/busybox/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: ${res_simpleDockerImage_imageName}
-  tag: ${res_simpleDockerImage_imageTag}
-#  repository: nginx
-#  tag: stable
+#  repository: ${res_simpleDockerImage_imageName}
+#  tag: ${res_simpleDockerImage_imageTag}
+  repository: nginx
+  tag: stable
   pullPolicy: IfNotPresent
 
 nameOverride: ""
