buildOn is true now

--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -40,7 +40,7 @@ resources:
       branches:
         include: main
       buildOn:
-        commit: false
+        commit: true
 
   - name: simplehelmChart2
     type: HelmChart
