trigger: false in HelmPublish

--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -93,6 +93,7 @@ pipelines:
           inputSteps:
             - name: push_image
           inputResources:
+            - trigger: false
             - name: simplehelmRepoChart1
           outputResources:
             - name: simplehelmChart2
