Test with RT integration in deployment step

--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -139,6 +139,7 @@ pipelines:
           releaseName: busybox${run_number}
           integrations:
             - name: k8sIntegrationMD
+            - name: artifactoryIntegration # test
           inputResources:
             - name: simplehelmChart2
             - name: simpleDockerImage
