--- a/pipeline/dynatrace/busybox/templates/deployment.yaml
+++ b/pipeline/dynatrace/busybox/templates/deployment.yaml
@@ -38,6 +38,8 @@ spec:
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
+      imagePullSecrets:
+      - name: regcred
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
