Create a secret, test, fix array

--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -149,11 +149,12 @@ pipelines:
             - values.yaml
         execution:
           onStart:
-            -> - kubectl create secret docker-registry regcred \
-                --docker-server=dynatracejtpp.jfrog.io \
-                --docker-username=${int_artifactoryIntegration_user} \
-                --docker-password=${int_artifactoryIntegration_apikey} \
-                --docker-email=danielmi@jfrog.com
+            - >-
+              kubectl create secret docker-registry regcred \
+              --docker-server=dynatracejtpp.jfrog.io \
+              --docker-username=${int_artifactoryIntegration_user} \
+              --docker-password=${int_artifactoryIntegration_apikey} \
+              --docker-email=danielmi@jfrog.com
             - kubectl config current-context
             - add_run_variables CLUSTER="$(kubectl config current-context)"
             - add_run_variables RELEASE_NAME="${my_releaseName}"
