--- a/pipeline/dynatrace/dynatraceSimpleHelm.yml
+++ b/pipeline/dynatrace/dynatraceSimpleHelm.yml
@@ -151,14 +151,14 @@ pipelines:
           onStart:
             - COUNT="$(kubectl get secret regcred | wc -l)"
             - >-
-              if [ "${COUNT}" =~ 0 ]
+              if [ "${COUNT}" =~ 0 ];
               then
-                echo "Creating regcred secret"
-                kubectl create secret docker-registry regcred --docker-server=dynatracejtpp.jfrog.io --docker-username=${int_artifactoryIntegration_user} --docker-password=${int_artifactoryIntegration_apikey}
+                echo "Creating regcred secret";
+                kubectl create secret docker-registry regcred --docker-server=dynatracejtpp.jfrog.io --docker-username=${int_artifactoryIntegration_user} --docker-password=${int_artifactoryIntegration_apikey};
               else
-                echo "Secret found, deleting and creating a new one"
-                kubectl delete secret regcred
-                kubectl create secret docker-registry regcred --docker-server=dynatracejtpp.jfrog.io --docker-username=${int_artifactoryIntegration_user} --docker-password=${int_artifactoryIntegration_apikey}
+                echo "Secret found, deleting and creating a new one";
+                kubectl delete secret regcred;
+                kubectl create secret docker-registry regcred --docker-server=dynatracejtpp.jfrog.io --docker-username=${int_artifactoryIntegration_user} --docker-password=${int_artifactoryIntegration_apikey};
               fi
             - kubectl config current-context
             - add_run_variables CLUSTER="$(kubectl config current-context)"
